creato switch mode auto e non

--- a/index.html
+++ b/index.html
@@ -15,12 +15,25 @@
 </head>
 
 <body>
+
+
+    <script src="src/js/script.js"></script>
+
     <header>
     </header>
 
     <main>
+
         <div id="profile">
-            <h1 class="title">MATTEO TIOZZO</h1>
+            <h1 class="title">MATTEO TIOZZO
+                <div class="container">
+                    <label class="switch">
+                        <input type="checkbox" id="modeSwitch">
+                        <span class="slider"></span>
+                    </label>
+                </div>
+            </h1>
+
             <dl id="info">
                 <dd>
                     <img id="immagine" src="assets/images/profile.jpeg" alt="profile photo">
