continuo mini.css

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 
         <div id="profile">
             <h1 class="title">MATTEO TIOZZO
-                <div class="container">
+                <!-- <div class="container">
                     <label class="switch">
                         <input type="checkbox" id="modeSwitch">
                         <span class="slider"></span>
                     </label>
-                </div>
+                </div> -->
             </h1>
 
             <dl id="info">
@@ -41,23 +41,22 @@
                         <h1 class="tabout">About me</h1>
                         <dt>ABOUT ME:</dt>
                         <dd>
-                            <span lang="en">I'm a student of computer science at the University of Padua. I'm
-                                passionate about programming and cybersecurity. I'm a very determined person and I
-                                always try to give my best in everything I do.
-                            </span>
+                            I'm a student of computer science at the University of Padua. I'm
+                            passionate about programming and cybersecurity. I'm a very determined person and I
+                            always try to give my best in everything I do.
+
                         </dd>
                         <dt>
                             SKILLS:
                         </dt>
                         <dd>
-                            <span lang="en">
-                                <b class="skills">Programming languages:</b> C, C++, Python, HTML, CSS, JavaScript,
-                                MySQL<br>
-                                <b class="skills">Operating systems:</b> MacOs, pnux, Windows<br>
-                                <b class="skills">Software:</b> Visual Studio, Visual Studio Code, Wireshark,
-                                VirtualBox<br>
-                                <b class="skills">Language: </b>English level B2
-                            </span>
+                            <b>Programming languages:</b> C, C++, Python, HTML, CSS, JavaScript,
+                            MySQL<br>
+                            <b>Operating systems:</b> MacOs, pnux, Windows<br>
+                            <b>Software:</b> Visual Studio, Visual Studio Code, Wireshark,
+                            VirtualBox<br>
+                            <b>Language: </b>English level B2
+
                         </dd>
                     </dl>
                 </dd>
