fix mini.css img

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <p id="experience">
                     <span lang="en"> <b>Programming languages:</b> C, C++, Python, HTML, CSS, JavaScript,
                         MySQL<br>
-                        <b>Operating systems:</b> MacOs, pnux, Windows<br>
+                        <b>Operating systems:</b> MacOs, Linux, Windows<br>
                         <b>Software:</b> Visual Studio, Visual Studio Code, Wireshark,
                         VirtualBox<br>
                         <b>Language: </b>English level B2</span>
