--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 
             <img id="immagine" src="assets/images/profile.jpeg" alt="profile photo">
 
-            <div id="now">
+            <div id="aboutme">
                 <p id="experience">
                     <span lang="en"> I'm a student of computer science at the University of Padua. I'm
                         passionate about programming and cybersecurity. I'm a very determined person and I
                         always try to give my best in everything I do.</span>
                 </p>
             </div>
-            <div id="now">
+            <div id="aboutme">
                 <p id="experience">
                     <span lang="en"> <b>Programming languages:</b> C, C++, Python, HTML, CSS, JavaScript,
                         MySQL<br>
@@ -53,34 +53,6 @@
                         <b>Language: </b>English level B2</span>
                 </p>
             </div>
-
-
-            <dl id="info">
-                <dd>
-                    <dl class="aboutme">
-                        <h1 class="tabout">About me</h1>
-                        <dt>ABOUT ME:</dt>
-                        <dd>
-                            I'm a student of computer science at the University of Padua. I'm
-                            passionate about programming and cybersecurity. I'm a very determined person and I
-                            always try to give my best in everything I do.
-
-                        </dd>
-                        <dt>
-                            SKILLS:
-                        </dt>
-                        <dd>
-                            <b>Programming languages:</b> C, C++, Python, HTML, CSS, JavaScript,
-                            MySQL<br>
-                            <b>Operating systems:</b> MacOs, pnux, Windows<br>
-                            <b>Software:</b> Visual Studio, Visual Studio Code, Wireshark,
-                            VirtualBox<br>
-                            <b>Language: </b>English level B2
-
-                        </dd>
-                    </dl>
-                </dd>
-            </dl>
         </div>
 
         <!-- EXPERIENCE -->
