change color styles.css

--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 
     <header>
     </header>
-
     <main>
-
         <div id="profile">
             <h1 class="title">MATTEO TIOZZO
                 <!-- <div class="container">
@@ -106,7 +104,8 @@
         <div id="CV-container">
             <p id="curriculum">
                 <span lang="en">Download my curriculum vitae</span>
-                <br><a id="cv" href="assets/TiozzoMatteo.pdf" download="CVTiozzoMatteo">CV TiozzoMatteo</a></br>
+                <br><a id="cv" href="assets/TiozzoMatteo.pdf" download="CVTiozzoMatteo" alt="Download CV">CV
+                    TiozzoMatteo</a></br>
             </p>
         </div>
     </main>
@@ -115,21 +114,23 @@
         <div id="divisore">
             <div id="prova">
                 <dt>EMAIL</dt>
-                <a id="email" class="styles"
-                    href="mailto:matteotiozzo.lavoro@gmail.com">matteotiozzo.lavoro@gmail.com</a>
+                <a id="email" class="styles" href="mailto:matteotiozzo.lavoro@gmail.com"
+                    alt="email">matteotiozzo.lavoro@gmail.com</a>
                 <dd class="print">matteotiozzo.lavoro@gmail.com</dd>
             </div>
 
             <div id="prova1">
                 <dt lang="en">LINKEDIN</dt>
-                <dd class="styles"><a href="https://www.linkedin.com/in/matteo-tiozzo-319395286/">Tiozzo Matteo</a>
+                <dd class="styles"><a href="https://www.linkedin.com/in/matteo-tiozzo-319395286/" alt="linkedin">Tiozzo
+                        Matteo</a>
                 </dd>
                 <dd class="print">https://www.linkedin.com/in/matteo-tiozzo-319395286/</dd>
             </div>
 
             <div id="prova2">
                 <dt>INSTAGRAM</dt>
-                <dd class="styles"><a href="https://www.instagram.com/tiozzo_matteo/">Tiozzo Matteo</a></dd>
+                <dd class="styles"><a href="https://www.instagram.com/tiozzo_matteo/" alt="instagram">Tiozzo Matteo</a>
+                </dd>
                 <dd class="print">https://www.instagram.com/tiozzo_matteo/</dd>
             </div>
         </div>
