change color mini.css

--- a/index.html
+++ b/index.html
@@ -36,19 +36,23 @@
 
             <div id="aboutme">
                 <p id="experience">
-                    <span lang="en"> I'm a student of computer science at the University of Padua. I'm
-                        passionate about programming and cybersecurity. I'm a very determined person and I
-                        always try to give my best in everything I do.</span>
+                    <span lang="en"> I'm a student of computer science at the <b>University of Padua</b>. I'm
+                        passionate about motorcycling and <b>travelling</b>. I would like to find a job to improve my
+                        actual
+                        digital skills and
+                        to learn new things about this amazing world. </span>
                 </p>
             </div>
             <div id="aboutme">
                 <p id="experience">
-                    <span lang="en"> <b>Programming languages:</b> C, C++, Python, HTML, CSS, JavaScript,
+                    <span lang="en">
+                        <b>Programming languages:</b> C, C++, Python, HTML, CSS, JavaScript,
                         MySQL<br>
                         <b>Operating systems:</b> MacOs, Linux, Windows<br>
                         <b>Software:</b> Visual Studio, Visual Studio Code, Wireshark,
                         VirtualBox<br>
-                        <b>Language: </b>English level B2</span>
+                        <b>Language: </b>English level B2
+                    </span>
                 </p>
             </div>
         </div>
